--- a/css/992-1199px.css
+++ b/css/992-1199px.css
@@ -30,6 +30,7 @@
 	}
 
 
+
 	/* Bouton "déconnexion" dans le menu */
 	.navbar .btn_connexion
 	{
@@ -38,12 +39,13 @@
 
 
 
-	/*----- HOME ----*/
+	/*------------ HOME --------------*/
 
 	#home .btnD3
 	{
 		font-size: 0.9em;
 	}
+
 
 
 	/*--------- TABLEAU DE BORD : IMG PROFIL---------*/
@@ -82,6 +84,18 @@
 
 	/*------------ PAGES : UPDATE + ADD EVENT / 
 	ADD + UPDATE RECIPE /ADD + UPDATE ADDRESS----------*/
+
+	
+	#addEvent form,
+	#updateEvent form,
+	#addRecipe form,
+	#updateRecipe form,
+	#addAddress form,
+	#updateAddress form
+	{
+		width: 60vw;
+	}
+
 
 	#addEvent label,
 	#updateEvent label,
